<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/category_business"
            android:textColor="@color/white"
            app:buttonTint="@color/business_category" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_personal"
            android:textColor="@color/white"
            app:buttonTint="@color/personal_category" />

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_others"
            android:textColor="@color/white"
            app:buttonTint="@color/other_category" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddtask"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/dialog_create_task"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>